fix: align of numbers and lines and change styles

--- a/rss-css-selectors/src/styles/global.scss
+++ b/rss-css-selectors/src/styles/global.scss
@@ -1,6 +1,16 @@
 $backdark: #303036;
 $backlight: #ede6e3;
-$text: #f0f4ef;
+$textdark: #141e30;
+$textlight: #f0f4ef;
+$harddark: #072c2f;
+$pink: #ff416c;
+$blue: #1883db;
+$lightblue: #3099ee;
+$green: #0afb89;
+$lightgreen: #02e963;
+$darkgradient: linear-gradient(to right, #141e30, #243b55);
+$pinkgradient: linear-gradient(to right, #ff416c, #ff4b2b);
+$shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
 @font-face {
     font-family: 'Zekton Rg';
@@ -17,15 +27,16 @@ html,
 body {
     height: 100%;
     min-height: 100%;
-    background: linear-gradient(to right, #141e30, #243b55);
 }
 body {
-    background-color: $backdark;
-    color: $text;
     font-family: 'Zekton Rg';
+    color: $textlight;
+    background: $darkgradient;
 }
 h1 {
     margin: 0;
+    letter-spacing: 0.5rem;
+    white-space: nowrap;
 }
 .main {
     display: grid;
@@ -37,8 +48,8 @@ h1 {
     flex-direction: column;
     &__header {
         padding: 10px;
-        background: linear-gradient(to right, #ff416c, #ff4b2b);
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        background: $pinkgradient;
+        box-shadow: $shadow;
     }
 }
 .board {
@@ -50,7 +61,7 @@ h1 {
 }
 .sidebar {
     min-height: 100%;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: $shadow;
     &__wrapper {
         height: 100%;
         padding: 0.65rem 1rem;
@@ -60,20 +71,26 @@ h1 {
     }
 }
 .menu {
+    h1, h3 {
+        letter-spacing: 0.2rem;
+    }
+    h3 {
+        margin: 1rem 0;
+    }
     &__nav {
         display: flex;
         align-items: center;
         column-gap: 0.8rem;
     }
     &__button {
-        width: 24px;
-        height: 24px;
+        width: 30px;
+        height: 30px;
         cursor: pointer;
         border: none;
         transition: all 0.2s ease-in-out;
-        background-color: #ff416c;
+        background-color: $pink;
         &:hover {
-            background: #1883db;
+            background: $blue;
         }
     }
     &__content {
@@ -95,7 +112,7 @@ h1 {
         padding: 20px 0;
         gap: 15px;
         justify-content: center;
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        box-shadow: $shadow;
     }
     &__button {
         width: 50px;
@@ -105,10 +122,10 @@ h1 {
         cursor: pointer;
         font-weight: bold;
         &__active {
-            background: linear-gradient(to right, #ff416c, #ff4b2b);
+            background: $pinkgradient;
         }
         &:hover {
-            background-color: #1883db;
+            background-color: $blue;
         }
     }
 }
@@ -116,8 +133,7 @@ h1 {
 .editor {
     display: flex;
     justify-content: center;
-    padding: 10px;
-    font-size: 16px;
+    padding: 1rem;
     height: 100%;
     font-weight: bold;
     &__wrapper {
@@ -125,24 +141,24 @@ h1 {
         justify-content: center;
         width: 100%;
         height: 100%;
-        // max-width: 1000px;
         border-radius: 20px;
         overflow: hidden;
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        background: linear-gradient(to right, #ff416c, #ff4b2b);
+        box-shadow: $shadow;
+        background: $pinkgradient;
     }
     &__header {
         display: flex;
         justify-content: center;
         padding: 10px 0;
-        background-color: $backlight;
         font-size: 22px;
-        color: #141e30;
+        letter-spacing: 0.3rem;
+        color: $textdark;
+        background-color: $backlight;
     }
     &__content {
         width: 100%;
         padding-top: 5px;
-        color: #141e30;
+        letter-spacing: 0.2rem;
         resize: none;
         outline: none;
     }
@@ -150,37 +166,49 @@ h1 {
     &__content-css,
     &__content-html {
         display: flex;
+        font-size: 18px;
+        line-height: 1.3;
     }
     &__numbers {
         margin: 0;
-        padding: 5px;
-        line-height: 1.2;
+        padding: 5px 5px 5px;
         list-style: none;
-        width: 1.5rem;
-        background-color: #072c2f;
+        width: 2.5rem;
+        background-color: $harddark;
         font-weight: normal;
         li {
             text-align: center;
         }
     }
     &__input__content {
+        margin-top: 0.5rem;
+        align-self: start;
         display: flex;
         align-items: center;
         column-gap: 10px;
-        margin: 5px;
-        max-height: 16px;
         width: 100%;
-    }
-    &__button {
-        width: 100%;
-        height: 20px;
-        max-width: 80px;
-        border-radius: 5px;
-        background-color: #0be3ef;
     }
     &__input {
         width: 100%;
+        margin-left: 0.5rem;
+        padding-left: 0.5rem;
+        border-radius: 5px;
+        border: none;
         outline: none;
+    }
+    &__button {
+        width: 100%;
+        max-width: 80px;
+        border-radius: 5px;
+        color: $textdark;
+        margin-right: 10px;
+        cursor: pointer;
+        background-color: $green;
+        border: none;
+        box-shadow: $shadow;
+        &:hover {
+            background-color: $lightgreen;
+        }
     }
     &__css {
         width: 50%;
@@ -193,7 +221,11 @@ h1 {
         cursor: pointer;
         &:hover {
             background-color: $backlight;
+            color: $textdark;
         }
+    }
+    &__line {
+        padding-left: 0.5rem;
     }
 }
 
@@ -230,6 +262,7 @@ star {
 }
 .active-line {
     background-color: $backlight;
+    color: $textdark;
 }
 .active-element {
     transform: scale(1.2);
